SERVER-71636 Fix explain of $lookup when inner collection is sharded

Before the fix, the system would erroneously dispatch
explain commands across the wire when executing the inner
side and throw away the results. After the fix, the system
will actually run the agg command itself against the inner
side. This improves the runtime stats that we expose in the
final explain output, and avoids the parsing-related error
originally reported under this ticket.

(cherry picked from commit 1ff4d25cae73aa0c26e7a2f09da363401ba48d33)