src/mongo/db/pipeline/dispatch_shard_pipeline_test.cpp
@@ -56,8 +56,11 @@ TEST_F(DispatchShardPipelineTest, DoesNotSplitPipelineIfTargetingOneShard) {
     const bool startsWithDocuments = false;
 
     auto future = launchAsync([&] {
-        auto results = sharded_agg_helpers::dispatchShardPipeline(
-            serializedCommand, hasChangeStream, startsWithDocuments, std::move(pipeline));
+        auto results = sharded_agg_helpers::dispatchShardPipeline(serializedCommand,
+                                                                  hasChangeStream,
+                                                                  startsWithDocuments,
+                                                                  std::move(pipeline),
+                                                                  boost::none /*explain*/);
         ASSERT_EQ(results.remoteCursors.size(), 1UL);
         ASSERT(!results.splitPipeline);
     });
@@ -88,8 +91,11 @@ TEST_F(DispatchShardPipelineTest, DoesSplitPipelineIfMatchSpansTwoShards) {
     const bool startsWithDocuments = false;
 
     auto future = launchAsync([&] {
-        auto results = sharded_agg_helpers::dispatchShardPipeline(
-            serializedCommand, hasChangeStream, startsWithDocuments, std::move(pipeline));
+        auto results = sharded_agg_helpers::dispatchShardPipeline(serializedCommand,
+                                                                  hasChangeStream,
+                                                                  startsWithDocuments,
+                                                                  std::move(pipeline),
+                                                                  boost::none /*explain*/);
         ASSERT_EQ(results.remoteCursors.size(), 2UL);
         ASSERT(bool(results.splitPipeline));
     });
@@ -123,8 +129,11 @@ TEST_F(DispatchShardPipelineTest, DispatchShardPipelineRetriesOnNetworkError) {
     const bool startsWithDocuments = false;
     auto future = launchAsync([&] {
         // Shouldn't throw.
-        auto results = sharded_agg_helpers::dispatchShardPipeline(
-            serializedCommand, hasChangeStream, startsWithDocuments, std::move(pipeline));
+        auto results = sharded_agg_helpers::dispatchShardPipeline(serializedCommand,
+                                                                  hasChangeStream,
+                                                                  startsWithDocuments,
+                                                                  std::move(pipeline),
+                                                                  boost::none /*explain*/);
         ASSERT_EQ(results.remoteCursors.size(), 2UL);
         ASSERT(bool(results.splitPipeline));
     });
@@ -169,11 +178,13 @@ TEST_F(DispatchShardPipelineTest, DispatchShardPipelineDoesNotRetryOnStaleConfig
     const bool startsWithDocuments = false;
 
     auto future = launchAsync([&] {
-        ASSERT_THROWS_CODE(
-            sharded_agg_helpers::dispatchShardPipeline(
-                serializedCommand, hasChangeStream, startsWithDocuments, std::move(pipeline)),
-            AssertionException,
-            ErrorCodes::StaleConfig);
+        ASSERT_THROWS_CODE(sharded_agg_helpers::dispatchShardPipeline(serializedCommand,
+                                                                      hasChangeStream,
+                                                                      startsWithDocuments,
+                                                                      std::move(pipeline),
+                                                                      boost::none /*explain*/),
+                           AssertionException,
+                           ErrorCodes::StaleConfig);
     });
 
     // Mock out an error response.
@@ -207,13 +218,16 @@ TEST_F(DispatchShardPipelineTest, WrappedDispatchDoesRetryOnStaleConfigError) {
     auto future = launchAsync([&] {
         // Shouldn't throw.
         sharding::router::CollectionRouter router(getServiceContext(), kTestAggregateNss);
-        auto results = router.route(
-            operationContext(),
-            "dispatch shard pipeline"_sd,
-            [&](OperationContext* opCtx, const ChunkManager& cm) {
-                return sharded_agg_helpers::dispatchShardPipeline(
-                    serializedCommand, hasChangeStream, startsWithDocuments, pipeline->clone());
-            });
+        auto results = router.route(operationContext(),
+                                    "dispatch shard pipeline"_sd,
+                                    [&](OperationContext* opCtx, const ChunkManager& cm) {
+                                        return sharded_agg_helpers::dispatchShardPipeline(
+                                            serializedCommand,
+                                            hasChangeStream,
+                                            startsWithDocuments,
+                                            pipeline->clone(),
+                                            boost::none /*explain*/);
+                                    });
         ASSERT_EQ(results.remoteCursors.size(), 1UL);
         ASSERT(!bool(results.splitPipeline));
     });
